--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>盧宥婷網頁</title>
+ </head>
+ <body>
+    </h1>Hello,電商二!</h1>
+    </body>
+</html>
+
+    
