--- a/index1.html
+++ b/index1.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>盧宥婷傳送門</h1>
-   <p>生日星座：8/26
-   <p>畢業學校：南崗國中
-   <p>個人特色：樂觀開朗
+   <p>生日星座：8/26</p>
+   <p>畢業學校：南崗國中</p>
+   <p>個人特色：樂觀開朗</p>
    <p>期待：順利畢業</p>
    <p><a href="https://www.ntsh.ntct.edu.tw">南投高中</a></p>
    <ims src="IMG_5884"alt="AI圖片" >
