--- a/index1.html
+++ b/index1.html
@@ -16,12 +16,12 @@
     <hr style="border-color:rgb(61, 42, 163);">
     <p>我是宥婷，8月26日出生的處女座，畢業於南崗國中。
         <br>個性害羞但勇敢
-        <br><span style="color:rgb(66, 187, 235);">在學習與生活中，我總希望能吸收各種實用技巧，讓自己持續成長。</span>
-        <br><span style="color:rgb(81, 201, 201);">就像雨中尋光，我相信每一次努力，都是照亮前方的一道微光。</span></p>
+        <br><span style="color:rgb(66, 187, 235);">慢慢來也沒關係，只要方向對，就不怕路遠。</span>
+        <br><span style="color:rgb(81, 201, 201);">人生不用急著完美，慢慢走，也能到想去的地方。</span></p>
     </body>
     <br>
     <figure align="center">
-        <img style="width:50%;" src=""IMG_5884"" alt="這是AI圖片">
+        <img style="width:50%;" src="3.png" alt="3.png">
         <br><button onclick="alert('ok');">我是按鈕</button>
         <br><a href="test.html">宥婷的天地</a>
     </figure>
