--- a/test32/about.html
+++ b/test32/about.html
@@ -28,9 +28,9 @@
     <h1 style="color:rgb(115, 202, 181);"> 南投高中</h1>
     <hr style="border-color:rgb(64, 92, 153);">
     <p style="color:rgb(40, 50, 109);">投高普通科:<a href="https://www.ntsh.ntct.edu.tw/home?cid=1307" target="_blank">
-        點我看影片
+        點我看圖片
     <p style="color:rgb(149, 152, 199);">投高電子商務科:<a href="https://www.ntsh.ntct.edu.tw/ischool/publish_page/32/"target="_blank">
-        點我看影片
+        點我看圖片
     <hr style="border-color:rgb(177, 172, 206);">
     </body>
     <p><a href="index.html">南投高中</a>| <a href="introduce.html">特色介紹頁</a>| <a href="about.html">關於投高</a>|</p></td>
