--- a/test32/about.html
+++ b/test32/about.html
@@ -14,8 +14,10 @@
     </body>
     </figure>
   </iframe>
-  <iframe src="01.jpg"
-  width="500"
+  <img src="C:\Users\NTSH-EC\Desktop\test32\image\01.jpg" width="950">
+</iframe>    
+<a href="https://
+  width="500
   height="450"
   scrolling="no"
   frameborder="0"
