--- a/test32/index.html
+++ b/test32/index.html
@@ -14,7 +14,9 @@
     </body>
     </figure>
   </iframe>
-  <iframe src="01.jpg"
+<img src="C:\Users\NTSH-EC\Desktop\test32\image\01.jpg" width="950">
+</iframe>    
+<a href="https://
   width="500"
   height="450"
   scrolling="no"
